--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .container {
     height: 100vh;
     width: 100%;
-    background-image: url("/Sound webpage_img/image.png");
+    background-image: url('Sound webpage_img/makarov.png');
     background-size: cover;
     background-position: center;
     position: relative;
